# snippets

./: Cargo.toml  b64pwgen.rs  content-compare.rs  csv-dedup.rs  csv-filelist-rename.rs  full-sqrt-day.rs  full-square-day.rs  hostsgen.rs
