[package]
name = "snippets"
version = "0.0.1"
edition = "2021"
authors = ["stackinspector"]
license = "MPL-2.0"

[[bin]]
name = "full-square-day"
path = "full-square-day.rs"

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["alloc"] }
deepsize = { version = "0.2", default-features = false, features = ["std"] }
