[package]
name = "snippets"
version = "0.0.1"
edition = "2021"
authors = ["stackinspector"]
license = "MPL-2.0"

[[bin]]
name = "playground"
path = "playground.rs"

[[bin]]
name = "full-square-day"
path = "full-square-day.rs"

[[bin]]
name = "b64pwgen"
path = "b64pwgen.rs"

[[bin]]
name = "hostsgen"
path = "hostsgen.rs"

[[bin]]
name = "content-compare"
path = "content-compare.rs"

[[bin]]
name = "csv-dedup"
path = "csv-dedup.rs"

[profile.release]
overflow-checks = true

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["alloc"] }
deepsize = { version = "0.2", default-features = false, features = ["std"] }
cshake = { git = "https://github.com/Berylsoft/keccak-state", features = ["std", "rand"] }
data-encoding = "2.6"
ureq = "2.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
csv = "1.3.1"
